--- a/Hotel/src/main/webapp/Dashboard.html
+++ b/Hotel/src/main/webapp/Dashboard.html
@@ -21,9 +21,9 @@
                         <li class="current"><a href="makeReservation.html">Submit a reservation for a hotel room</a></li>
                         <li class="current"><a href="viewRes.html">Review the status for your reservations</a></li>
                         <li class="current"><a href="CreateTicket.jsp">Raise an issue with the Host</a></li>
-                        <li class="current"><a href="index.html">View your replies</a></li>
-                        <li class="current"><a href="userProfile.jsp">View your profile</a></li>
-                        <li class="current"><a href="edit.jsp">Update your profile</a></li>
+                        <li class="current"><a href="viewMessage.html">View your tickets</a></li>
+                        <li class="current"><a href="viewProfile.html">View your profile</a></li>
+                        <li class="current"><a href="updatedProfile.html">Update your profile</a></li>
                         <li class="current"><a href="logout">Logout</a></li>
                </ul> 
                
