--- a/Hotel/src/main/webapp/hDashboard.html
+++ b/Hotel/src/main/webapp/hDashboard.html
@@ -17,7 +17,7 @@
              <p>  Select an option below </p>
                 <ul>
                         <li class="current"><a href="UploadPic.jsp">Upload an image of the hotel room</a></li>
-                        <li class="current"><a href="index.html">View/resolve issues from Guests</a></li>
+                        <li class="current"><a href="respondT.jsp">View/resolve issues from Guests</a></li>
                         <li class="current"><a href="viewAll">View all rooms</a></li>
                         <li class="current"><a href="viewAllG">View all Guests</a></li>
                         <li class="current"><a href="displayImage.jsp">View uploaded picture</a></li>
