--- a/Hotel/src/main/webapp/index.html
+++ b/Hotel/src/main/webapp/index.html
@@ -34,7 +34,7 @@
         <section id="quote">
             <div class="container">
                 <h1>Create a account to book a reservation!  </h1>
-                <form action ="" method="post">
+                <form action ="create" method="post">
                     <input type="USERNAME" name="u" placeholder="Create a Username.">
                     <input type="PASSWORD" name="p" placeholder="Create a Password.">
                     <input type="FIRSTNAME" name="f" placeholder="Enter your first name">
